--- a/src/assets/scss/eclass/_auth.scss
+++ b/src/assets/scss/eclass/_auth.scss
@@ -1,5 +1,6 @@
 .auth {
   display: flex;
+  flex-direction: column;
 
   width: 100vw;
   height: 100vh;
@@ -7,17 +8,16 @@
   align-items: center;
   justify-content: center;
 
-  &__background {
+  background-image: url("../img/auth/background.jpg");
+  background-repeat: no-repeat;
+  background-size: 100vw 150vh;
+  background-position: center;
+
+  & > img {
     position: absolute;
-    width: 100vw;
-    height: 100vh;
-
-    filter: blur(5px);
-
-    background-image: url("../img/auth/background.jpg");
-    background-repeat: no-repeat;
-    background-size: 100vw 150vh;
-    background-position: center;
+    height: 250px;
+    left: 5vw;
+    top: 0;
   }
 
   &__form {
@@ -27,11 +27,9 @@
     width: 35vw;
     min-height: 50vh;
 
-    background-color: #ffffff;
-    border-radius: 2px;
-    box-shadow: 2px 2px 50px #000;
-
-    backdrop-filter: blur(0.8);
+    background-color: #ffffffc7;
+    border-radius: 5px;
+    box-shadow: 2px 2px 40px #000;
 
     z-index: 1;
   }
