Rooms List Initial Commit

--- a/src/assets/scss/eclass.scss
+++ b/src/assets/scss/eclass.scss
@@ -1,7 +1,10 @@
 @import "./eclass/navigation-bar";
 
+@import "./eclass/home";
+
 @import "./eclass/auth";
 @import "./eclass/login";
 @import "./eclass/register";
 
 @import "./eclass/room-card";
+@import "./eclass/rooms-list";
