--- a/src/assets/scss/eclass/_room-card.scss
+++ b/src/assets/scss/eclass/_room-card.scss
@@ -4,7 +4,7 @@
   display: flex;
   padding: 10px;
 
-  border: 1px solid rgba(0, 0, 0, 0.125);
+  border-bottom: 1px solid rgba(0, 0, 0, 0.125);
 
   &__img {
     height: 100%;
