Home Page Components UI

--- a/src/assets/scss/eclass.scss
+++ b/src/assets/scss/eclass.scss
@@ -8,3 +8,6 @@
 
 @import "./eclass/room-card";
 @import "./eclass/rooms-list";
+
+@import "./eclass/room-page";
+@import "./eclass/room-page-header";
