--- a/src/assets/scss/eclass/_home.scss
+++ b/src/assets/scss/eclass/_home.scss
@@ -4,4 +4,26 @@
 
   width: 100vw;
   height: 100vh;
+
+  &__nav-bar {
+    width: 100%;
+    height: 67px;
+  }
+
+  &__body {
+    display: flex;
+
+    width: 100%;
+    height: calc(100vh - 67px);
+
+    &__rooms-list-container {
+      width: 320px;
+      height: 100%;
+    }
+
+    &__room-page-container {
+      width: 100%;
+      height: 100%;
+    }
+  }
 }
