Room Page Chat UI Initial Commit

--- a/src/assets/scss/eclass.scss
+++ b/src/assets/scss/eclass.scss
@@ -11,4 +11,7 @@
 
 @import "./eclass/room-page";
 @import "./eclass/room-page-header";
+@import "./eclass/room-page-chat";
 @import "./eclass/room-page-compose";
+
+@import "./eclass/single-message";
