--- a/src/assets/scss/eclass.scss
+++ b/src/assets/scss/eclass.scss
@@ -14,4 +14,6 @@
 @import "./eclass/room-page-chat";
 @import "./eclass/room-page-compose";
 
+@import "./eclass/room-detail-modal";
+
 @import "./eclass/single-message";
