Create New Exam Modal

--- a/src/assets/scss/eclass.scss
+++ b/src/assets/scss/eclass.scss
@@ -15,6 +15,7 @@
 @import "./eclass/room-page-compose";
 
 @import "./eclass/room-detail-modal";
+@import "./eclass/create-exam-modal";
 
 @import "./eclass/single-message";
 
