--- a/src/assets/scss/eclass/_create-exam-modal.scss
+++ b/src/assets/scss/eclass/_create-exam-modal.scss
@@ -8,15 +8,24 @@
     color: #000;
   }
 
+  & section {
+    padding: 0.5rem;
+    margin: 0.5rem 0;
+    border: 1px solid rgba(0, 0, 0, 0.2);
+    border-radius: 5px;
+    background-color: rgba(0, 0, 0, 0.027);
+  }
+
   &__exam-title {
     display: flex;
+    align-items: center;
 
     & label {
       flex: 1;
     }
 
     & input {
-      flex: 2;
+      flex: 5;
     }
   }
 
@@ -26,5 +35,20 @@
     flex-direction: column;
 
     margin: 1rem 0;
+  }
+
+  &__questions {
+    margin-bottom: 0.5rem;
+    padding-bottom: 0.5rem;
+
+    &__header {
+      border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+      margin-bottom: 0.5rem;
+    }
+  }
+
+  &__submit-exam {
+    text-align: right;
+    padding-right: 1rem;
   }
 }
