Create and Join Room Modal

--- a/src/assets/scss/eclass.scss
+++ b/src/assets/scss/eclass.scss
@@ -17,6 +17,9 @@
 @import "./eclass/room-detail-modal";
 @import "./eclass/create-exam-modal";
 
+@import "./eclass/create-room-modal";
+@import "./eclass/join-room-modal";
+
 @import "./eclass/single-message";
 
 @import "./eclass/exam-card";
