Select and Change Room UI and Logic

--- a/src/assets/scss/eclass/_room-card.scss
+++ b/src/assets/scss/eclass/_room-card.scss
@@ -6,6 +6,14 @@
 
   border-bottom: 1px solid rgba(0, 0, 0, 0.125);
 
+  &--selected {
+    background-color: rgba(30, 177, 121, 0.11);
+  }
+
+  &:hover {
+    cursor: pointer;
+  }
+
   &__img {
     height: 100%;
     width: 60px;
