--- a/src/assets/scss/eclass/_room-page-header.scss
+++ b/src/assets/scss/eclass/_room-page-header.scss
@@ -12,6 +12,10 @@
   background-color: rgba(21, 175, 42, 0.041);
   border-bottom: 1px solid rgba(0, 184, 61, 0.5);
 
+  &:hover {
+    cursor: pointer;
+  }
+
   &__room-name {
     font-weight: 500;
   }
