--- a/src/assets/scss/eclass/_person-card.scss
+++ b/src/assets/scss/eclass/_person-card.scss
@@ -1,4 +1,9 @@
 .person-card {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-bottom: 1px solid rgba(0, 126, 10, 0.301);
+
   &__person-name {
     width: 100%;
     height: 40px;
@@ -7,7 +12,5 @@
 
     color: #000;
     font-weight: 500;
-
-    border-bottom: 1px solid rgba(0, 126, 10, 0.301);
   }
 }
