--- a/src/assets/scss/eclass/_exam-card.scss
+++ b/src/assets/scss/eclass/_exam-card.scss
@@ -10,7 +10,7 @@
   padding: 10px;
 
   border-bottom: 1px solid rgba(0, 126, 10, 0.301);
-
+  background-color: #229c3c23;
   &__left {
     flex: 1;
     display: flex;
