--- a/src/assets/scss/eclass/_person-card.scss
+++ b/src/assets/scss/eclass/_person-card.scss
@@ -3,6 +3,7 @@
   justify-content: center;
   align-items: center;
   border-bottom: 1px solid rgba(0, 126, 10, 0.301);
+  background-color: #229c3c23;
 
   &__person-name {
     width: 100%;
