--- a/src/assets/scss/eclass/_room-detail-modal.scss
+++ b/src/assets/scss/eclass/_room-detail-modal.scss
@@ -1,4 +1,5 @@
 .room-detail-modal {
+
   &__room-name {
     margin: 10px 0;
     text-align: center;
@@ -13,16 +14,18 @@
 
     width: 100%;
 
-    background-color: #067a1f67;
-    border-radius: 5px;
+    background-color: #229c3c23;
+    border-radius: 0px;
+
+    font-weight: 500;
 
     &__title {
       font-weight: 500;
       margin: 0;
-      border-radius: 5px 0 0 5px;
+      border-radius: 0;
       padding: 10px 5px;
-      background-color: #067a1fcb;
-      color: rgb(223, 223, 223);
+      background-color: #045816ad;
+      color: rgb(255, 255, 255);
     }
 
     &__link {
