--- a/src/assets/scss/eclass/_exam.scss
+++ b/src/assets/scss/eclass/_exam.scss
@@ -3,7 +3,7 @@
   flex-direction: row;
   
   width: 100%;
-  height: calc(100vh - 67px);
+  height: 100vh;
   
   &__questions {
     flex: 2;
@@ -28,6 +28,8 @@
     display: flex;
     flex-direction: column;
     
+    background-color: rgb(231, 231, 231);
+
     height: 100%;
     width: 100%;
 
@@ -41,7 +43,8 @@
       flex: 1;
       text-align: center;
 
-      font-size: 3rem;
+      font-size: 2.2rem;
+      color: rgb(68, 68, 68);
     }
 
     & > hr {
@@ -59,7 +62,7 @@
       align-items: center;
 
       & > button {
-        margin: 0 0.5rem;
+        margin: 2rem 0.5rem;
       }
     }
   
